[package]
name = "ww_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
futures-util = "0.3.30"
rand = "0.8.5"
regex = "1.10.4"
serde = "1.0.200"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { versions = "0.15.4", features = ["builder"] }
